anthosconfig/namespaces/recommendation/recommendation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recommendation
  labels: 
    istio-injection: enabled
